Fix LF/CRLF crap

--- a/configure.ac
+++ b/configure.ac
@@ -50,9 +50,9 @@ echo "LDFLAGS = $LDFLAGS"
 
 
 dnl Process Makefile.am to generate Makefile
-AC_CONFIG_FILES([Makefile
-                 src/Makefile
+AC_CONFIG_FILES([src/Makefile
                  src/lib/Makefile
                  src/ui/Makefile])
 
 AC_OUTPUT(Makefile)
+
