--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,9 +1,29 @@
-RESOURCES_BIN = $(builddir)/resources.bin
-RESOURCES_XML = $(srcdir)/resources.gresource.xml
+# vim: set noet ts=8 sw=8 sts=8:
 
-all: $(RESOURCES_BIN)
+all: fpe-resources.c fpe-resources.h
+
+fpe-resources.c: $(srcdir)/resources.gresource.xml \
+		 gears-menu.ui
+	glib-compile-resources \
+		--sourcedir=$(srcdir) \
+		--sourcedir=$(top_builddir)/data \
+		--target=$@ \
+		--generate-source \
+		--c-name fpe \
+		$(srcdir)/resources.gresource.xml
+
+fpe-resources.h: $(srcdir)/resources.gresource.xml \
+		 gears-menu.ui
+	glib-compile-resources \
+		--sourcedir=$(srcdir) \
+		--sourcedir=$(top_builddir)/data \
+		--target=$@ \
+		--generate-header \
+		--c-name fpe \
+		$(srcdir)/resources.gresource.xml
 
 
-$(RESOURCES_BIN): $(RESOURCES_XML)
-	glib-compile-resources --target $@ $<
 
+
+BUILT_SOURCES = fpe-resources.c \
+		fpe-resources.h
