--- a/src/ui/Makefile.am
+++ b/src/ui/Makefile.am
@@ -1,6 +1,7 @@
 # vim: set noet ts=8 sw=8 sts=8:
 
 AM_CPPFLAGS = \
+	      -I$(top_builddir)/data \
 	      -I$(top_builddir)/src \
 	      -I$(top_srcdir)/src \
 	      -I$(top_srcdir)/src/lib \
@@ -11,6 +12,8 @@ libui_a_SOURCES = mainwindow.c \
 		  mainheader.c \
 		  mainheader.h \
 		  statusbar.c \
-		  statusbar.h
+		  statusbar.h \
+		  $(top_builddir)/data/fpe-resources.c \
+		  $(top_builddir)/data/fpe-resources.h
 
 noinst_LIBRARIES = libui.a
