--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 # vim: set noet ts=8 sw=8 sts=8:
 
+# Disable dependency tracking, that fails sometimes for obscure reasons
+AUTOMAKE_OPTIONS = no-dependencies
+
 SUBDIRS = src data
 
 AM_CPPFLAGS = \
