Add 'Fulscreen' toggle, mostly as test code for VICE =)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ bin_PROGRAMS = pixeleditor
 # pixeleditor_LDFLAGS = $(LDFLAGS)
 
 # Trigger rebuild of GResource files. There's probably a better way
-main.c: $(top_builddir)/data/fpe-resources.c $(top_builddir)/data/fpe-resources.h
+#main.c: $(top_builddir)/data/fpe-resources.c $(top_builddir)/data/fpe-resources.h
 
 
 LDADD = $(top_builddir)/src/ui/libui.a
